[package]
name = "socket"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server_muti_thread"
path = "src/server_muti_thread.rs"

[[bin]]
name = "server_muti_process"
path = "src/server_muti_process.rs"

[dependencies]
signal-hook = "0.3.18"
rand = "0.10.0-rc.0"
libc = "0.2.177"